# UnitreecameraSDK_ge

./: CMakeLists.txt  send_to_unitree.sh
bins/: calib.Pqg7ss  example_getCalibParamsFile  example_getDepthFrame  example_getPointCloud  example_getRawFrame  example_getRawFrameLCM  example_getRawFrameMod  example_getRectFrame  example_getimagetrans  example_putImagetrans  ros_DepthFrame_server  ros_RawFrame_server  ros_RectFrame_server
examples/: CMakeLists.txt  example_getRawFrame.cc  example_getRawFrameLCM.cc  example_getRawFrameMod.cc  example_getRectFrame.cc  example_putImagetrans.cc  lcm_RawFrame_server.cc  ros_AllFrame_server.cc  ros_DepthFrame_server.cc  ros_RawFrame_server.cc  ros_RectFrame_server.cc  ros_scratch.cc
include/lcm_types/: camera_message_lcmt.hpp  camera_message_lcmt.lcm
python/: CMakeLists.txt  bindings.cpp
scripts/: calib.cIK0Nn  camera_message_lcmt.py  lcm_recv_test.py  prepare_cameras.sh  socket_recv_test.py  start_lcm_server.sh  start_ros_node.sh
